getClass().newInstance() deprecated in Java9
- Instead, use getClass().getDeclaredConstructor().newInstance() and catch NoSuchMethodException when developer does not declare public constructor on their class that subclasses Entity.